--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/react.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Little Lemon – Experience the finest Mediterranean flavors! Enjoy fresh, authentic dishes made with love. Visit us for a delightful dining experience or order online today.">
+
+    <meta name="og:title" content="Little Lemon" />
+    <meta name="og:description" content="Taste the best Mediterranean dishes at Little Lemon! Fresh ingredients, authentic flavors, and a cozy dining experience. Order online or visit us today!">
+    <meta name="og:image" content="/assets/restauranfood.jpg" />
+
+    <title>Little Lemon</title>
   </head>
   <body>
     <div id="root"></div>
