--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta name="og:title" content="Little Lemon" />
     <meta name="og:description" content="Taste the best Mediterranean dishes at Little Lemon! Fresh ingredients, authentic flavors, and a cozy dining experience. Order online or visit us today!">
-    <meta name="og:image" content="/assets/restauranfood.jpg" />
+    <meta name="og:image" content="/Logo.svg" />
 
     <title>Little Lemon</title>
   </head>
