--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <meta name="og:image" content="/Logo.svg" />
 
     <title>Little Lemon</title>
+    <script src="https://raw.githubusercontent.com/courseraap/capstone/main/api.js"></script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
